Enable garbage collection logging by default
This change requires changes to the CrateDB .deb and .rpm packages, as
well as to the Docker image.

With that change, CrateDB logs garbage collection times to
$CRATE_HOME/logs. Log files are rotated with a maximum file size of 64MB
and kept 16 rotations.

To change default log path, file size, rotation, as well as to
completely disable GC logging, there have been introduced various
environment variables.